# vlessok

./: .gitignore  README.md  package-lock.json  package.json
src/: connections.css  connections.html  connections.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  inside_base.lst  lib.rs  main.rs  routing.rs  russia_pack.rs  singbox.rs
src-tauri/src/platform/: mod.rs  windows.rs
