[package]
name = "vlessok"
version = "0.1.0"
description = "Минималистичный VPN-клиент для VLESS+Reality+Vision"
authors = ["shershshsh"]
edition = "2021"

# Подробнее о полях Cargo.toml:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Суффикс _lib нужен чтобы имя библиотеки не конфликтовало с именем бинарника.
# Это особенность Windows, см. https://github.com/rust-lang/cargo/issues/8519
name = "vlessok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# tauri-build — утилита для сборки Tauri-приложения
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri — основной фреймворк для десктопного приложения
tauri = { version = "2", features = [] }
# tauri-plugin-opener — плагин для открытия ссылок в системном браузере
tauri-plugin-opener = "2"
# serde — библиотека для сериализации/десериализации данных (JSON и др.)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
