[package]
name = "vlessok"
version = "1.0.3"
description = "Минималистичный VPN-клиент для VLESS+Reality+Vision"
authors = ["shershshsh"]
edition = "2021"

[lib]
# Суффикс _lib нужен чтобы имя библиотеки не конфликтовало с именем бинарника.
# Это особенность Windows, см. https://github.com/rust-lang/cargo/issues/8519
name = "vlessok_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# tauri-build — утилита для сборки Tauri-приложения
tauri-build = { version = "2", features = [] }

[dependencies]
# tauri — основной фреймворк для десктопного приложения
tauri = { version = "2", features = [] }
# tauri-plugin-opener — плагин для открытия ссылок в системном браузере
tauri-plugin-opener = "2"
# serde — сериализация/десериализация (нужна для генерации JSON-конфига sing-box)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# url — парсинг VLESS-ссылок (vless://uuid@server:port?params#remark)
url = "2"
# tempfile — создание временных файлов для конфига sing-box
tempfile = "3"
# log — стандартный интерфейс логирования для Rust
log = "0.4"
# env_logger — вывод логов в консоль (читает переменную RUST_LOG)
env_logger = "0.11"
# ureq — простой синхронный HTTP-клиент
ureq = "2"
tauri-plugin-dialog = "2.7.1"
sysinfo = "0.39.3"
chrono = "0.4"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "windows")'.dependencies]
# windows — вызов WinAPI для управления жизненным циклом процессов (Job Objects)
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security"
] }
